--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header class="container px-3 lg:px-8 mx-auto">
         <div class="navbar bg-base-100">
             <div class="navbar-start">
